{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 1479,
  "lineage": "1f4694bf-f62b-eb28-cc68-aadfcd83b336",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "connect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892a9c01908fafd1",
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:instance/i-007c954eb31a34fba",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-007c954eb31a34fba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "thesis-kafka",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07d54cc5294fb121e",
            "private_dns": "ip-10-0-6-10.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.10",
            "public_ip": "3.27.62.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0828efb716d4aa84a",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01cd98026d3c4ca3c",
            "tags": {
              "Name": "connect"
            },
            "tags_all": {
              "Name": "connect"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c4ae664571087299"
            ]
          },
          "dependencies": [
            "aws_instance.kafka_broker_1",
            "aws_instance.kafka_broker_2",
            "aws_instance.kafka_broker_3",
            "aws_security_group.kafka_sg",
            "aws_subnet.connect_subnet",
            "aws_subnet.kafka_subnet_az1",
            "aws_subnet.kafka_subnet_az2",
            "aws_subnet.kafka_subnet_az3",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_center",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892a9c01908fafd1",
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:instance/i-0e97eda49472d012c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e97eda49472d012c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "thesis-kafka",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0accf51adc6a2f1e1",
            "private_dns": "ip-10-0-4-10.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.10",
            "public_ip": "3.26.93.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b0fbe6b480390534",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4ce125fdf5718f7",
            "tags": {
              "Name": "control-center"
            },
            "tags_all": {
              "Name": "control-center"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c4ae664571087299"
            ]
          },
          "dependencies": [
            "aws_instance.connect",
            "aws_instance.kafka_broker_1",
            "aws_instance.kafka_broker_2",
            "aws_instance.kafka_broker_3",
            "aws_instance.ksqldb",
            "aws_instance.ksqldb2",
            "aws_instance.schema_registry",
            "aws_security_group.kafka_sg",
            "aws_subnet.connect_subnet",
            "aws_subnet.control_center_subnet",
            "aws_subnet.kafka_subnet_az1",
            "aws_subnet.kafka_subnet_az2",
            "aws_subnet.kafka_subnet_az3",
            "aws_subnet.ksqldb2_subnet",
            "aws_subnet.ksqldb_subnet",
            "aws_subnet.schema_registry_subnet",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "influxdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892a9c01908fafd1",
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:instance/i-08bfff4602f9f6786",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08bfff4602f9f6786",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "thesis-kafka",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-059e4149a80ff143a",
            "private_dns": "ip-10-0-9-10.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.9.10",
            "public_ip": "3.106.125.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00b51598d79303c2b",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a1db37acae0646a",
            "tags": {
              "Name": "influxdb"
            },
            "tags_all": {
              "Name": "influxdb"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c4ae664571087299"
            ]
          },
          "dependencies": [
            "aws_security_group.kafka_sg",
            "aws_subnet.influxdb_subnet",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kafka_broker_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892a9c01908fafd1",
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:instance/i-0ad7c5b95fefeba10",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad7c5b95fefeba10",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "thesis-kafka",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0197f59f1ae5979fe",
            "private_dns": "ip-10-0-1-10.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_ip": "52.65.200.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06c1974e5111834c1",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0405e8b71023bbf97",
            "tags": {
              "Name": "kafka-broker-1"
            },
            "tags_all": {
              "Name": "kafka-broker-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c4ae664571087299"
            ]
          },
          "dependencies": [
            "aws_security_group.kafka_sg",
            "aws_subnet.kafka_subnet_az1",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kafka_broker_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892a9c01908fafd1",
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:instance/i-03c5d019015bd57dc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c5d019015bd57dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "thesis-kafka",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d1be1a34aa5792eb",
            "private_dns": "ip-10-0-2-10.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.10",
            "public_ip": "3.27.199.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08057de96bb316440",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0afc9864a636b0968",
            "tags": {
              "Name": "kafka-broker-2"
            },
            "tags_all": {
              "Name": "kafka-broker-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c4ae664571087299"
            ]
          },
          "dependencies": [
            "aws_security_group.kafka_sg",
            "aws_subnet.kafka_subnet_az2",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kafka_broker_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892a9c01908fafd1",
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:instance/i-07607bceef762c96a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07607bceef762c96a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "thesis-kafka",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c823690267ccb106",
            "private_dns": "ip-10-0-3-10.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.10",
            "public_ip": "3.26.33.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04898f6a0a76ba757",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e5c5fc6e04d8f533",
            "tags": {
              "Name": "kafka-broker-3"
            },
            "tags_all": {
              "Name": "kafka-broker-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c4ae664571087299"
            ]
          },
          "dependencies": [
            "aws_security_group.kafka_sg",
            "aws_subnet.kafka_subnet_az3",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ksqldb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892a9c01908fafd1",
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:instance/i-0c0f29787813a032e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c0f29787813a032e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "thesis-kafka",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-069d249a1fe886851",
            "private_dns": "ip-10-0-7-10.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.7.10",
            "public_ip": "3.25.237.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fbabc68ef2c4e40d",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d68189874bc767a6",
            "tags": {
              "Name": "ksqldb"
            },
            "tags_all": {
              "Name": "ksqldb"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c4ae664571087299"
            ]
          },
          "dependencies": [
            "aws_instance.connect",
            "aws_instance.kafka_broker_1",
            "aws_instance.kafka_broker_2",
            "aws_instance.kafka_broker_3",
            "aws_instance.schema_registry",
            "aws_security_group.kafka_sg",
            "aws_subnet.connect_subnet",
            "aws_subnet.kafka_subnet_az1",
            "aws_subnet.kafka_subnet_az2",
            "aws_subnet.kafka_subnet_az3",
            "aws_subnet.ksqldb_subnet",
            "aws_subnet.schema_registry_subnet",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ksqldb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892a9c01908fafd1",
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:instance/i-0242a8347590c77d2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0242a8347590c77d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "thesis-kafka",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-008b14c1958755522",
            "private_dns": "ip-10-0-8-10.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.10",
            "public_ip": "13.236.69.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01eda8dd4544d181f",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0918b5f42fd65fd16",
            "tags": {
              "Name": "ksqldb2"
            },
            "tags_all": {
              "Name": "ksqldb2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c4ae664571087299"
            ]
          },
          "dependencies": [
            "aws_instance.connect",
            "aws_instance.kafka_broker_1",
            "aws_instance.kafka_broker_2",
            "aws_instance.kafka_broker_3",
            "aws_instance.schema_registry",
            "aws_security_group.kafka_sg",
            "aws_subnet.connect_subnet",
            "aws_subnet.kafka_subnet_az1",
            "aws_subnet.kafka_subnet_az2",
            "aws_subnet.kafka_subnet_az3",
            "aws_subnet.ksqldb2_subnet",
            "aws_subnet.schema_registry_subnet",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "schema_registry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892a9c01908fafd1",
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:instance/i-01d33cd5a753ff291",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01d33cd5a753ff291",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "thesis-kafka",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01a0732007f6da1f7",
            "private_dns": "ip-10-0-5-10.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.10",
            "public_ip": "3.106.183.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0576e2da00aa54046",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd99b612ecddc295",
            "tags": {
              "Name": "schema_registry"
            },
            "tags_all": {
              "Name": "schema_registry"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c4ae664571087299"
            ]
          },
          "dependencies": [
            "aws_instance.kafka_broker_1",
            "aws_instance.kafka_broker_2",
            "aws_instance.kafka_broker_3",
            "aws_security_group.kafka_sg",
            "aws_subnet.kafka_subnet_az1",
            "aws_subnet.kafka_subnet_az2",
            "aws_subnet.kafka_subnet_az3",
            "aws_subnet.schema_registry_subnet",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kafka_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:internet-gateway/igw-040a249916fd6d87c",
            "id": "igw-040a249916fd6d87c",
            "owner_id": "396608766005",
            "tags": {
              "Name": "kafka-igw"
            },
            "tags_all": {
              "Name": "kafka-igw"
            },
            "vpc_id": "vpc-01c524ebf431cdf70"
          },
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kafka_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:route-table/rtb-0baa15ab5ebe8f5e5",
            "id": "rtb-0baa15ab5ebe8f5e5",
            "owner_id": "396608766005",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-040a249916fd6d87c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c524ebf431cdf70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kafka_igw",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "connect_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efe14942bcb01ed1",
            "route_table_id": "rtb-0baa15ab5ebe8f5e5",
            "subnet_id": "subnet-01cd98026d3c4ca3c"
          },
          "dependencies": [
            "aws_internet_gateway.kafka_igw",
            "aws_route_table.kafka_route_table",
            "aws_subnet.connect_subnet",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "control_center_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06866603332a29e24",
            "route_table_id": "rtb-0baa15ab5ebe8f5e5",
            "subnet_id": "subnet-0f4ce125fdf5718f7"
          },
          "dependencies": [
            "aws_internet_gateway.kafka_igw",
            "aws_route_table.kafka_route_table",
            "aws_subnet.control_center_subnet",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "influxdb_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a790e5ed337eef0",
            "route_table_id": "rtb-0baa15ab5ebe8f5e5",
            "subnet_id": "subnet-01a1db37acae0646a"
          },
          "dependencies": [
            "aws_internet_gateway.kafka_igw",
            "aws_route_table.kafka_route_table",
            "aws_subnet.influxdb_subnet",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kafka_rta_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0240a739b4a3619b4",
            "route_table_id": "rtb-0baa15ab5ebe8f5e5",
            "subnet_id": "subnet-0405e8b71023bbf97"
          },
          "dependencies": [
            "aws_internet_gateway.kafka_igw",
            "aws_route_table.kafka_route_table",
            "aws_subnet.kafka_subnet_az1",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kafka_rta_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0accc8032b2fe0355",
            "route_table_id": "rtb-0baa15ab5ebe8f5e5",
            "subnet_id": "subnet-0afc9864a636b0968"
          },
          "dependencies": [
            "aws_internet_gateway.kafka_igw",
            "aws_route_table.kafka_route_table",
            "aws_subnet.kafka_subnet_az2",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kafka_rta_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0deae5ce5e16ec3f4",
            "route_table_id": "rtb-0baa15ab5ebe8f5e5",
            "subnet_id": "subnet-0e5c5fc6e04d8f533"
          },
          "dependencies": [
            "aws_internet_gateway.kafka_igw",
            "aws_route_table.kafka_route_table",
            "aws_subnet.kafka_subnet_az3",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ksqldb2_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05df68aea6e084f06",
            "route_table_id": "rtb-0baa15ab5ebe8f5e5",
            "subnet_id": "subnet-0918b5f42fd65fd16"
          },
          "dependencies": [
            "aws_internet_gateway.kafka_igw",
            "aws_route_table.kafka_route_table",
            "aws_subnet.ksqldb2_subnet",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ksqldb_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027efdb23f316fe38",
            "route_table_id": "rtb-0baa15ab5ebe8f5e5",
            "subnet_id": "subnet-0d68189874bc767a6"
          },
          "dependencies": [
            "aws_internet_gateway.kafka_igw",
            "aws_route_table.kafka_route_table",
            "aws_subnet.ksqldb_subnet",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "schema_registry_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b82560cc701fa19",
            "route_table_id": "rtb-0baa15ab5ebe8f5e5",
            "subnet_id": "subnet-0fd99b612ecddc295"
          },
          "dependencies": [
            "aws_internet_gateway.kafka_igw",
            "aws_route_table.kafka_route_table",
            "aws_subnet.schema_registry_subnet",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:security-group/sg-0c4ae664571087299",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4ae664571087299",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9021,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9021
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 29092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 29092
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 29093,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 29093
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8086,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8086
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8088,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8088
              }
            ],
            "name": "terraform-20240917001205688400000001",
            "name_prefix": "terraform-",
            "owner_id": "396608766005",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka-sg"
            },
            "tags_all": {
              "Name": "kafka-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c524ebf431cdf70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "connect_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:subnet/subnet-01cd98026d3c4ca3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cd98026d3c4ca3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396608766005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "connect-subnet"
            },
            "tags_all": {
              "Name": "connect-subnet"
            },
            "vpc_id": "vpc-01c524ebf431cdf70"
          },
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "control_center_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:subnet/subnet-0f4ce125fdf5718f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4ce125fdf5718f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396608766005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "control-center-subnet"
            },
            "tags_all": {
              "Name": "control-center-subnet"
            },
            "vpc_id": "vpc-01c524ebf431cdf70"
          },
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "influxdb_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:subnet/subnet-01a1db37acae0646a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a1db37acae0646a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396608766005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ksqldb2-subnet"
            },
            "tags_all": {
              "Name": "ksqldb2-subnet"
            },
            "vpc_id": "vpc-01c524ebf431cdf70"
          },
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kafka_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:subnet/subnet-0405e8b71023bbf97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0405e8b71023bbf97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396608766005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kafka-subnet-az1"
            },
            "tags_all": {
              "Name": "kafka-subnet-az1"
            },
            "vpc_id": "vpc-01c524ebf431cdf70"
          },
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kafka_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:subnet/subnet-0afc9864a636b0968",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afc9864a636b0968",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396608766005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kafka-subnet-az2"
            },
            "tags_all": {
              "Name": "kafka-subnet-az2"
            },
            "vpc_id": "vpc-01c524ebf431cdf70"
          },
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kafka_subnet_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:subnet/subnet-0e5c5fc6e04d8f533",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5c5fc6e04d8f533",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396608766005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kafka-subnet-az3"
            },
            "tags_all": {
              "Name": "kafka-subnet-az3"
            },
            "vpc_id": "vpc-01c524ebf431cdf70"
          },
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ksqldb2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:subnet/subnet-0918b5f42fd65fd16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0918b5f42fd65fd16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396608766005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ksqldb2-subnet"
            },
            "tags_all": {
              "Name": "ksqldb2-subnet"
            },
            "vpc_id": "vpc-01c524ebf431cdf70"
          },
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ksqldb_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:subnet/subnet-0d68189874bc767a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d68189874bc767a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396608766005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ksqldb-subnet"
            },
            "tags_all": {
              "Name": "ksqldb-subnet"
            },
            "vpc_id": "vpc-01c524ebf431cdf70"
          },
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "schema_registry_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:subnet/subnet-0fd99b612ecddc295",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd99b612ecddc295",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396608766005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "schema-registry-subnet"
            },
            "tags_all": {
              "Name": "schema-registry-subnet"
            },
            "vpc_id": "vpc-01c524ebf431cdf70"
          },
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kafka_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:396608766005:vpc/vpc-01c524ebf431cdf70",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b58fa4e5492a23fb",
            "default_route_table_id": "rtb-09aeaaf0d2b0270e6",
            "default_security_group_id": "sg-0e3df3cf4520807c5",
            "dhcp_options_id": "dopt-01eff6a1d089ffe3d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01c524ebf431cdf70",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09aeaaf0d2b0270e6",
            "owner_id": "396608766005",
            "tags": {
              "Name": "kafka-vpc"
            },
            "tags_all": {
              "Name": "kafka-vpc"
            }
          }
        }
      ]
    }
  ]
}